src/test/ui/issues/issue-17458.stderr
error[E0658]: casting pointers to integers in statics is unstable (see issue #51910)
  --> $DIR/issue-17458.rs:1:19
   |
LL | static X: usize = 0 as *const usize as usize;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_raw_ptr_to_usize_cast)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
